cmake_minimum_required(VERSION 3.26)
project(BeginningCppProgramming)

set(CMAKE_CXX_STANDARD 23)

#set(BUILD_1 main)
#set(BeginningCppProgramming section6/InitializingVariables/src/main.cpp)
#add_executable(BeginningCppProgramming section6/InitializingVariables/src/main.cpp
#        section7/Arrays/src/Arrays.cpp
#)
#
#set(BUILD_2 main_2)
#set(BeginningCppProgramming section6/GlobalVariables/src/GlobalVariables.cpp)
#add_executable(GlobalVariables section6/GlobalVariables/src/GlobalVariables.cpp)
#
#set(BUILD_3 main_3)
#set(BeginningCppProgramming section6/PrimitiveTypes/src/PrimitiveTypes.cpp)
#add_executable(PrimitiveTypes section6/PrimitiveTypes/src/PrimitiveTypes.cpp)
#
#set(BUILD_4 main_4)
#set(BeginningCppProgramming section6/sizeof/src/sizeofOperator.cpp)
#add_executable(sizeofOperator section6/sizeof/src/sizeofOperator.cpp)
#
#set(BUILD_5 main_5)
#set(BeginningCppProgramming section6/Constants/src/Constants.cpp)
#add_executable(Constants section6/Constants/src/Constants.cpp)
#
#set(BUILD_6 main_6)
#set(BeginningCppProgramming section6/Challenge/src/Challenge.cpp)
#add_executable(Challenge section6/Challenge/src/Challenge.cpp)
#
#set(BUILD_7 main_7)
#set(BeginningCppProgramming section7/Arrays/src/Arrays.cpp)
#add_executable(Arrays section7/Arrays/src/Arrays.cpp)
#
#set(BUILD_8 main_8)
#set(BeginningCppProgramming section7/Vectors/src/Vector.cpp)
#add_executable(Vector section7/Vectors/src/Vector.cpp)
#
#set(BUILD_9 main_9)
#set(BeginningCppProgramming section7/Challenge/src/Challenge.cpp)
#add_executable(ChallengeSection7 section7/Challenge/src/Challenge.cpp)
#
#set(BUILD_10 main_10)
#set(BeginningCppProgramming section8/AssignmentOperator/src/AssignmentOperator.cpp)
#add_executable(AssignmentOperator section8/AssignmentOperator/src/AssignmentOperator.cpp)
#add_executable(IncrementDecrementOperators section8/IncrementDecrementOperators/src/IncrementDecrementOperators.cpp)
#add_executable(main section8/MixedExpressions/src/main.cpp)
#add_executable(EqualityOperator section8/EqualityOperator/src/main.cpp)
#add_executable(LogicalOperatorsTest section8/LogicalOperatorTest/src/main.cpp)
#add_executable(challenge section8/Challenge/src/challenge.cpp)
#
#set(BUILD_11 main_11)
#add_executable(switchEnum section9/SwitchEnum/src/switchEnum.cpp)
#add_executable(ConditionalOperator section9/ConditionalOperator/src/ConditionalOperator.cpp)
#add_executable(ForLoop section9/ForLoop/src/ForLoop.cpp)
#add_executable(RangeBasedForLoop section9/RangeBasedForLoop/src/RangeBasedForLoop.cpp)
#add_executable(WhileLoop section9/WhileLoop/src/WhileLoop.cpp)
#add_executable(MultiplicationTable section9/MultiplicationTable/src/MultiplicationTable.cpp)
#add_executable(Histogram section9/Histogram/src/Histogram.cpp)
#add_executable(ChallengeSection9 section9/Challenge/src/Challenge.cpp)
#
#set(BUILD_12 main_12)
#add_executable(CStyleStrings section10/CStyleStrings/src/CStyleStrings.cpp)
#add_executable(CppStrings section10/CppStrings/src/CppStrings.cpp)
#add_executable(ChallengeSection10 section10/ChallengeSection10/src/ChallengeSection10.cpp)
#
#set(BUILD_13 main_13)
#add_executable(Math section11/Math/src/Math.cpp)
#add_executable(FuncDefinition section11/FunctionDefinitions/src/FuncDefinition.cpp)
#add_executable(DefaultArguments section11/DefaultArguments/src/DefaultArguments.cpp)
#add_executable(FunctionOverloading section11/FunctionOverloading/src/FunctionOverloading.cpp)
#add_executable(ArraysAndFunctions section11/ArraysAndFunctions/src/ArraysAndFunctions.cpp)
#add_executable(PassByReference section11/PassByReference/src/PassByReference.cpp)
#add_executable(ScopeExample section11/ScopeExample/src/ScopeExample.cpp)
#add_executable(HowFunctionCallsWork section11/HowFunctionCallsWork/src/HowFunctionCallsWork.cpp)
#
#set(BUILD_14 main_14)
#add_executable(Pointer section12/WhatIsPointer/src/Pointer.cpp)
#add_executable(DereferencingPointer section12/DereferencingPointer/src/DereferencingPointer.cpp)
#add_executable(DynamicMemory section12/DynamicMemory/src/DynamicMemory.cpp)
#add_executable(ArraysAndPointers section12/ArraysAndPointers/src/ArraysAndPointers.cpp)
#add_executable(PointerArithmetic section12/PointerArithmetic/src/PointerArithmetic.cpp)
#add_executable(PassingPointers1 section12/PassingPointers1/src/PassingPointers1.cpp)
#add_executable(PassingPointers2 section12/PassingPointers2/src/PassingPointers2.cpp)
#add_executable(PassingPointers3 section12/PassingPointers3/src/PassingPointers3.cpp)
#add_executable(ReturnPointer section12/ReturnPointer/src/ReturnPointer.cpp)
#add_executable(exercise section12/Exercise_Passing_a_pointer_to_a_function/src/exercise.cpp)
#add_executable(exercise2 section12/Exercise_Passing_a_pointer_to_a_function/src/exercise2.cpp)
#add_executable(exercise3 section12/Exercise_Passing_a_pointer_to_a_function/src/exercise3.cpp)
#add_executable(exercise4 section12/Exercise_Passing_a_pointer_to_a_function/src/exercise4.cpp)
##add_executable(references section12/References/src/references.cpp)

set(BUILD_15 main_15)
add_executable(DeclareClassAndObjects section13/DeclareClassAndObjects/src/DeclareClassAndObjects.cpp)
add_executable(AccessingClassMembers section13/AccessingClassMembers/src/AccessingClassMembers.cpp)
add_executable(AccessModifiers section13/AccessModifiers/src/AccessModifiers.cpp section13/AccessModifiers/src/AccessModifiers.h)
add_executable(Account section13/ImplementingMethods1/src/Account.cpp section13/ImplementingMethods1/src/Account.h)
add_executable(DefaultConstructor section13/DefaultConstructor.cpp)
add_executable(constructInitializationList section13/ConstructorInitializationList/src/constructInitializationList.cpp section13/ConstructorInitializationList/src/constructInitializationList.h)
add_executable(DefaultConstructorParameters section13/DefaultConstructorParameters.cpp section13/DefaultConstructorParameters.h)
